architect replaced to targets

--- a/src/CFSISNetCoreAPI/wwwroot/index.html
+++ b/src/CFSISNetCoreAPI/wwwroot/index.html
@@ -41,7 +41,7 @@
       box-shadow: 4px 4px 6px #535353;
     }
   </style>
-</head>
+<link rel="stylesheet" href="styles.5df5108eaa79624acef8.css"></head>
 <body>
 
 <app-root>
@@ -53,7 +53,7 @@
   </div>
 </app-root>
 
-<script type="text/javascript" src="runtime.js"></script><script type="text/javascript" src="polyfills.js"></script><script type="text/javascript" src="styles.js"></script><script type="text/javascript" src="scripts.js"></script><script type="text/javascript" src="vendor.js"></script><script type="text/javascript" src="main.js"></script></body>
+<script type="text/javascript" src="runtime.ec2944dd8b20ec099bf3.js"></script><script type="text/javascript" src="polyfills.f6ae3e8b63939c618130.js"></script><script type="text/javascript" src="scripts.955ee4ae490fefcd465d.js"></script><script type="text/javascript" src="main.87cfd6a3ebed51fcb000.js"></script></body>
 </html>
 
 
